- bdos/fsdir.c: Fixed potential uninitialized variable. (VRI)
- bios/mfp.c bios/screen.c bios/sound.c tools/genctables.awk: Use static const
  instead of const static for standard complicance. (VRI)
- cli/command.c: Fixed no-op in rename command when the destination file is the
  same as the source file. (VRI)
- vdi/vdi_fill.c: Use static void instead of void static for standard
  complicance. (VRI)

2011-09-20
- bdos/console.c: Fixed backspace key in EmuCON with 8-bit characters. (VRI)
- vdi/vdi_line.c: Fast, full precision square root. Contributed by David
  Savinkoff. (VRI)

2011-09-22
- Makefile: Renamed the ARAnyM ROM to emutos-aranym.img. (VRI)
- Makefile: Changed the default target to "help". (VRI)
- Makefile: Use the VMA_T* variables in the help message. (VRI)
- Makefile: Renamed the FireBee ROM to emutosfb.s19. (VRI)
- include/config.h: Set the FireBee initinfo duration to 8 seconds. (VRI)

2011-09-24
- include/config.h: Added missing initialization of CONF_WITH_DMASOUND. Reported
  by David Savinkoff. (VRI)
- Makefile: Initialize VMA with default value and LMA with VMA. (VRI)
- bios/machine.c: Added DBG_MACHINE. (VRI)
- bios/clock.c: Fix warning when NO_IKBD_CLOCK is not defined. (VRI)
- Makefile: Merge LDFLAGS_VMA to LDFLAGS. (VRI)
- Makefile: Avoid breaking linker lines. (VRI)
- Makefile: Move additional linker options to the end of the command line. (VRI)
- Makefile: Added padding message. (VRI)
- Makefile: Added the # character in front of the output messages. (VRI)
- Makefile: Replaced in by into. (VRI)
- bios/screen.c: Added missing volatile. (VRI)

2011-09-26
- po/de.po: Updated German translation. (THH)
- po/cs.po: Updated Czech translation. Contributed by Pavel Salac. (VRI)
- po/fi.po: Updated Finnish translation. Contributed by Eero Tamminen. (VRI)
- vdi/vdi_line.c: Fixed missing lines whan drawing arrows. Contributed by David
  Savinkoff. (VRI)
- vdi/vdi_line.c: Removed an unused ptr++ in wideline(). Contributed by David
  Savinkoff. (VRI)